autocomplete fixed on ios

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -3,7 +3,7 @@
 @import "foundation";
 
 .headroom {
-    margin: 2px 0 0 0;
+    margin: 15px 0 0 0;
 }
 
 .centered {
